cmake_minimum_required(VERSION 3.24)
project(derivative)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(derivative)
add_subdirectory(smartString)
add_subdirectory(smallAllocator)
add_subdirectory(simpleTCPServer)
add_subdirectory(practic_select_chat)
add_subdirectory(practic_poll_chat)
add_subdirectory(practic_epoll_chat)
add_subdirectory(epollChat)
add_subdirectory(libeventServer)
add_subdirectory(libev_echo_server)